# src/server/routes/routines.ts
@@ -32,7 +32,6 @@ function rowToSetTarget(row: RoutineSetTargetRow): SetTarget {
     reps: row.reps ?? undefined,
     repsMin: row.repsMin ?? undefined,
     repsMax: row.repsMax ?? undefined,
-    rpe: row.rpe ?? undefined,
     setType: row.setType as SetTarget["setType"],
     techniqueNotes: row.techniqueNotes ?? null,
   };
@@ -45,12 +44,10 @@ function rowToItem(row: RoutineItemRow, targets: SetTarget[]): RoutineItem {
     order: row.order,
     setCount: row.setCount,
     repMode: row.repMode as RoutineItem["repMode"],
-    rpeMode: row.rpeMode as RoutineItem["rpeMode"],
     setTypeMode: row.setTypeMode as RoutineItem["setTypeMode"],
     uniformReps: row.uniformReps ?? undefined,
     uniformRepsMin: row.uniformRepsMin ?? undefined,
     uniformRepsMax: row.uniformRepsMax ?? undefined,
-    uniformRpe: row.uniformRpe ?? undefined,
     uniformSetType: row.uniformSetType != null
       ? (row.uniformSetType as RoutineItem["uniformSetType"])
       : undefined,
@@ -173,12 +170,10 @@ function insertChildren(
           exerciseId: item.exerciseId,
           setCount: item.setCount,
           repMode: item.repMode,
-          rpeMode: item.rpeMode,
           setTypeMode: item.setTypeMode,
           uniformReps: item.uniformReps ?? null,
           uniformRepsMin: item.uniformRepsMin ?? null,
           uniformRepsMax: item.uniformRepsMax ?? null,
-          uniformRpe: item.uniformRpe ?? null,
           uniformSetType: item.uniformSetType ?? null,
           durationSec: item.durationSec ?? null,
           durationMinSec: item.durationMinSec ?? null,
@@ -198,7 +193,6 @@ function insertChildren(
               reps: st.reps ?? null,
               repsMin: st.repsMin ?? null,
               repsMax: st.repsMax ?? null,
-              rpe: st.rpe ?? null,
               setType: st.setType,
               techniqueNotes: st.techniqueNotes ?? null,
             })
